--- a/styles/contact-info/contact-info.scss
+++ b/styles/contact-info/contact-info.scss
@@ -11,7 +11,7 @@
 
   @include breakpoint($tablet) {
 
-    margin-bottom: 3em;
+    margin-bottom: 4.8em;
   }
 
   @include breakpoint($laptop-small) {
@@ -32,13 +32,17 @@
     }
 
     @include breakpoint($tablet) {
+      @include span(6 of 12 inside no-gutters);
+      float: right;
 
-      margin-bottom: 3em;
+      margin-bottom: 3.9em;
     }
 
     @include breakpoint($laptop-small) {
+      @include span(6 of 12 inside no-gutters);
+      float: right;
 
-      margin-bottom: 3em;
+      margin-bottom: 3.9em;
     }
 
     > .contact-info__link {
@@ -131,13 +135,15 @@
       }
 
       @include breakpoint($tablet) {
+        @include span(6 of 12 inside no-gutters);
 
-        margin: 0 0 2.8em;
+        margin: 0 0 2.5em;
       }
 
       @include breakpoint($laptop-small) {
+        @include span(6 of 12 inside no-gutters);
 
-        margin: 0 0 2.8em;
+        margin: 0 0 2.5em;
       }
 
       @include breakpoint($laptop-large) {
@@ -172,6 +178,18 @@
       float: none;
 
       margin-top: 3.75em;
+    }
+
+    @include breakpoint($tablet) {
+      @include span(6 of 12 inside no-gutters);
+
+      width: auto;
+    }
+
+    @include breakpoint($laptop-small) {
+      @include span(6 of 12 inside no-gutters);
+
+      width: auto;
     }
 
     @include breakpoint($mobile-l) {
